# the-second-brain

./: ARCHITECTURE.md  README.md  docker-compose.yml  setup.bat  setup.sh
.github/workflows/: ci.yml
apps/cortex/: .env  .env.example  .gitignore  README.md  database.py  graph.py  main.py  models.py  pyproject.toml  tools.py
apps/cortex/tests/: test_main.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: SettingsModal.tsx
apps/web/src/components/ui/: navigation-menu-styles.ts  navigation-menu.tsx  tabs.tsx
apps/web/src/utils/: storage.ts
docs/: SETUP.md
docs/adr/: 00-Technology-choices.md
