[tool.poetry]
name = "cortex"
version = "0.1.0"
description = "The Second Brain Cortex - Backend Service"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langchain = "^0.1.16"
langgraph = "^0.0.39"
langchain-openai = "^0.1.3"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
openai = "^1.23.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
greenlet = "^3.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
