[tool.poetry]
name = "cortex"
version = "0.1.0"
description = "The Second Brain Cortex - Backend Service"
authors = ["Admin <admin@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langchain = "^1.2.10"
langgraph = "^1.0.8"
langchain-openai = "^1.1.9"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
python-dotenv = "^1.0.1"
openai = "^1.23.0"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.5"
greenlet = "^3.0.3"
aiosqlite = "^0.22.1"
langchain-google-genai = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.3.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
